--- a/SearchAlgorithmsLib/SearchAlgorithmsLib/packages.config
+++ b/SearchAlgorithmsLib/SearchAlgorithmsLib/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="C5" version="2.4.5947.17249" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
+  <package id="OptimizedPriorityQueue" version="4.0.4" targetFramework="net452" />
 </packages>
