--- a/SearchAlgorithmsLib/SearchAlgorithmsLib/SearchAlgorithmsLib.csproj
+++ b/SearchAlgorithmsLib/SearchAlgorithmsLib/SearchAlgorithmsLib.csproj
@@ -60,6 +60,7 @@
     <Compile Include="ISearcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Solution.cs" />
+    <Compile Include="State.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
