--- a/SearchAlgorithmsLib/SearchAlgorithmsLib/SearchAlgorithmsLib.csproj
+++ b/SearchAlgorithmsLib/SearchAlgorithmsLib/SearchAlgorithmsLib.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BFS.cs" />
     <Compile Include="Searcher.cs" />
     <Compile Include="ISearchable.cs" />
     <Compile Include="ISearcher.cs" />
