--- a/SearchAlgorithmsLib/SearchAlgorithmsLib/SearchAlgorithmsLib.csproj
+++ b/SearchAlgorithmsLib/SearchAlgorithmsLib/SearchAlgorithmsLib.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BFS.cs" />
+    <Compile Include="DFS.cs" />
     <Compile Include="Searchable.cs" />
     <Compile Include="Searcher.cs" />
     <Compile Include="ISearchable.cs" />
