--- a/SearchAlgorithmsLib/Server/Server.csproj
+++ b/SearchAlgorithmsLib/Server/Server.csproj
@@ -42,6 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\CommandClose.cs" />
+    <Compile Include="Commands\CommandGenerate.cs" />
+    <Compile Include="Commands\CommandJoin.cs" />
+    <Compile Include="Commands\CommandList.cs" />
+    <Compile Include="Commands\CommandPlay.cs" />
+    <Compile Include="Commands\CommandSolve.cs" />
+    <Compile Include="Commands\CommandStart.cs" />
+    <Compile Include="Commands\ICommand.cs" />
+    <Compile Include="IController.cs" />
+    <Compile Include="IModel.cs" />
+    <Compile Include="IView.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
