--- a/SearchAlgorithmsLib/Server/Server.csproj
+++ b/SearchAlgorithmsLib/Server/Server.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClientHandler.cs" />
     <Compile Include="Commands\CloseCommand.cs" />
     <Compile Include="Commands\GenerateCommand.cs" />
     <Compile Include="Commands\ICommand.cs" />
@@ -57,12 +58,14 @@
     <Compile Include="Commands\SolveCommand.cs" />
     <Compile Include="Commands\StartCommand.cs" />
     <Compile Include="Controller.cs" />
+    <Compile Include="IClientHandler.cs" />
     <Compile Include="IController.cs" />
     <Compile Include="IModel.cs" />
     <Compile Include="IView.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Server.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
