--- a/SearchAlgorithmsLib/Server/Server.csproj
+++ b/SearchAlgorithmsLib/Server/Server.csproj
@@ -66,6 +66,7 @@
     <Compile Include="IController.cs" />
     <Compile Include="IModel.cs" />
     <Compile Include="Model.cs" />
+    <Compile Include="Move.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchableMazeAdapter.cs" />
