--- a/SearchAlgorithmsLib/GUI/App.config
+++ b/SearchAlgorithmsLib/GUI/App.config
@@ -25,7 +25,7 @@
             <setting name="SearchAlgorithm" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="GameList" serializeAs="String">
+            <setting name="MazeName" serializeAs="String">
                 <value>0</value>
             </setting>
         </GUI.Properties.Settings>
