--- a/SearchAlgorithmsLib/GUI/App.config
+++ b/SearchAlgorithmsLib/GUI/App.config
@@ -25,8 +25,8 @@
             <setting name="SearchAlgorithm" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="GameList" serializeAs="String">
-                <value>0</value>
+            <setting name="MazeName" serializeAs="String">
+                <value />
             </setting>
         </GUI.Properties.Settings>
     </userSettings>
