--- a/SearchAlgorithmsLib/GUI/Properties/Settings.settings
+++ b/SearchAlgorithmsLib/GUI/Properties/Settings.settings
@@ -17,8 +17,8 @@
     <Setting Name="SearchAlgorithm" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="GameList" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">0</Value>
+    <Setting Name="MazeName" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
