--- a/SearchAlgorithmsLib/GUI/GUI.csproj
+++ b/SearchAlgorithmsLib/GUI/GUI.csproj
@@ -34,8 +34,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MazeGeneratorLib">
+      <HintPath>..\..\..\..\ex1\MazeGeneratorLib.dll</HintPath>
+    </Reference>
     <Reference Include="MazeLib">
-      <HintPath>..\..\..\בר אילן\תכנות מתקדם 2\תרגילים\MazeLib.dll</HintPath>
+      <HintPath>..\..\..\..\ex1\MazeLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -60,6 +63,9 @@
     <Compile Include="Controls\DefinePlay.xaml.cs">
       <DependentUpon>DefinePlay.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\MazeControl.xaml.cs">
+      <DependentUpon>MazeControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Model\ISettingsModel.cs" />
     <Compile Include="Model\AppSettingsModel.cs" />
     <Compile Include="Model\PlayerModel.cs" />
@@ -80,6 +86,10 @@
       <DependentUpon>SinglePlayerView.xaml</DependentUpon>
     </Compile>
     <Page Include="Controls\DefinePlay.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\MazeControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
