--- a/SearchAlgorithmsLib/GUI/Properties/Settings.settings
+++ b/SearchAlgorithmsLib/GUI/Properties/Settings.settings
@@ -18,7 +18,7 @@
       <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="MazeName" Type="System.String" Scope="User">
-      <Value Profile="(Default)">0</Value>
+      <Value Profile="(Default)">Moshe</Value>
     </Setting>
   </Settings>
 </SettingsFile>
