--- a/SearchAlgorithmsLib/GUI/GUI.csproj
+++ b/SearchAlgorithmsLib/GUI/GUI.csproj
@@ -94,6 +94,9 @@
     <Compile Include="View\SinglePlayerView.xaml.cs">
       <DependentUpon>SinglePlayerView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\WaitingWindow.xaml.cs">
+      <DependentUpon>WaitingWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="Controls\DefinePlay.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -134,6 +137,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="View\WaitingWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -171,6 +178,9 @@
   <ItemGroup>
     <Resource Include="Images\poo.jpeg" />
     <Resource Include="Images\toilet.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\waiting.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
