--- a/SearchAlgorithmsLib/Client/Client.csproj
+++ b/SearchAlgorithmsLib/Client/Client.csproj
@@ -32,10 +32,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MazeGeneratorLib">
+    <Reference Include="MazeGeneratorLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\בר אילן\תכנות מתקדם 2\תרגילים\MazeGeneratorLib.dll</HintPath>
     </Reference>
-    <Reference Include="MazeLib">
+    <Reference Include="MazeLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\בר אילן\תכנות מתקדם 2\תרגילים\MazeLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
