--- a/SearchAlgorithmsLib/Server/Server.csproj
+++ b/SearchAlgorithmsLib/Server/Server.csproj
@@ -33,10 +33,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MazeGeneratorLib">
-      <HintPath>..\..\..\..\ex1\MazeGeneratorLib.dll</HintPath>
+      <HintPath>..\..\..\בר אילן\תכנות מתקדם 2\תרגילים\MazeGeneratorLib.dll</HintPath>
     </Reference>
     <Reference Include="MazeLib">
-      <HintPath>..\..\..\..\ex1\MazeLib.dll</HintPath>
+      <HintPath>..\..\..\בר אילן\תכנות מתקדם 2\תרגילים\MazeLib.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -83,7 +83,7 @@
       <Name>Client</Name>
     </ProjectReference>
     <ProjectReference Include="..\SearchAlgorithmsLib\SearchAlgorithmsLib.csproj">
-      <Project>{64C0EA76-E9A2-4BBD-B98A-AC5D0ADD42E6}</Project>
+      <Project>{64c0ea76-e9a2-4bbd-b98a-ac5d0add42e6}</Project>
       <Name>SearchAlgorithmsLib</Name>
     </ProjectReference>
   </ItemGroup>
