--- a/SearchAlgorithmsLib/WebApp/WebApp.csproj
+++ b/SearchAlgorithmsLib/WebApp/WebApp.csproj
@@ -91,6 +91,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Css\index.css" />
+    <Content Include="Css\NavBar.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Html\Login.html" />
