--- a/SearchAlgorithmsLib/GUI/GUI.csproj
+++ b/SearchAlgorithmsLib/GUI/GUI.csproj
@@ -35,10 +35,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MazeGeneratorLib">
-      <HintPath>..\..\..\בר אילן\תכנות מתקדם 2\תרגילים\MazeGeneratorLib.dll</HintPath>
+      <HintPath>..\..\..\..\barIlan\תכנות מתקדם 2\תרגילים\MazeGeneratorLib.dll</HintPath>
     </Reference>
     <Reference Include="MazeLib">
-      <HintPath>..\..\..\בר אילן\תכנות מתקדם 2\תרגילים\MazeLib.dll</HintPath>
+      <HintPath>..\..\..\..\barIlan\תכנות מתקדם 2\תרגילים\MazeLib.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -186,6 +186,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\waiting.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
