--- a/SearchAlgorithmsLib/SearchAlgorithmsLib/SearchAlgorithmsLib.csproj
+++ b/SearchAlgorithmsLib/SearchAlgorithmsLib/SearchAlgorithmsLib.csproj
@@ -31,10 +31,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MazeGeneratorLib">
-      <HintPath>..\..\..\..\ex1\MazeGeneratorLib.dll</HintPath>
+      <HintPath>..\..\..\..\barIlan\תכנות מתקדם 2\תרגילים\MazeGeneratorLib.dll</HintPath>
     </Reference>
     <Reference Include="MazeLib">
-      <HintPath>..\..\..\..\ex1\MazeLib.dll</HintPath>
+      <HintPath>..\..\..\..\barIlan\תכנות מתקדם 2\תרגילים\MazeLib.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
