--- a/SearchAlgorithmsLib/Tests/Tests.csproj
+++ b/SearchAlgorithmsLib/Tests/Tests.csproj
@@ -33,10 +33,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MazeGeneratorLib">
-      <HintPath>..\..\..\בר אילן\תכנות מתקדם 2\תרגילים\MazeGeneratorLib.dll</HintPath>
+      <HintPath>..\..\..\..\barIlan\תכנות מתקדם 2\תרגילים\MazeGeneratorLib.dll</HintPath>
     </Reference>
     <Reference Include="MazeLib">
-      <HintPath>..\..\..\בר אילן\תכנות מתקדם 2\תרגילים\MazeLib.dll</HintPath>
+      <HintPath>..\..\..\..\barIlan\תכנות מתקדם 2\תרגילים\MazeLib.dll</HintPath>
     </Reference>
     <Reference Include="Priority Queue, Version=4.0.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\OptimizedPriorityQueue.4.0.4\lib\net45\Priority Queue.dll</HintPath>
