--- a/SearchAlgorithmsLib/WebApp/WebApp.csproj
+++ b/SearchAlgorithmsLib/WebApp/WebApp.csproj
@@ -116,6 +116,7 @@
     <Content Include="Html\Settings.html" />
     <Content Include="Scripts\MazeBoard.js" />
     <Content Include="Scripts\NavBar.js" />
+    <Content Include="Scripts\SinglePlayer.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
