--- a/SearchAlgorithmsLib/WebApp/WebApp.csproj
+++ b/SearchAlgorithmsLib/WebApp/WebApp.csproj
@@ -120,6 +120,7 @@
     <Content Include="Html\Settings.html" />
     <Content Include="Scripts\MazeBoard.js" />
     <Content Include="Scripts\NavBar.js" />
+    <Content Include="Scripts\Registration.js" />
     <Content Include="Scripts\SinglePlayer.js" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -134,6 +135,7 @@
     <Compile Include="Models\Model.cs" />
     <Compile Include="Models\Move.cs" />
     <Compile Include="Models\SearchableMazeAdapter.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
