--- a/SearchAlgorithmsLib/WebApp/WebApp.csproj
+++ b/SearchAlgorithmsLib/WebApp/WebApp.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Game.cs" />
     <Compile Include="Models\IModel.cs" />
     <Compile Include="Models\Model.cs" />
