--- a/SearchAlgorithmsLib/WebApp/Web.config
+++ b/SearchAlgorithmsLib/WebApp/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301879
@@ -8,8 +8,7 @@
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     </configSections>
   <connectionStrings>
-    <add name="WebAppContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=WebAppContext-20170629215046; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|WebAppContext-20170629215046.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="WebAppContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=WebAppContext-20170629215046; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|WebAppContext-20170629215046.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
